Deploy/deployment-vite.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-react-app
  template:
    metadata:
      labels:
        app: vite-react-app
    spec:
      containers:
      - name: vite-react-app
        image: panchanandevops/vite-react-app:v1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
