Deploy/vite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-service
spec:
  selector:
    app: vite-react-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
