Deploy/vite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: panchanandevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vite-service
            port:
              number: 8080
